--- a/XMLtoPDFVoucherConverter/XMLtoPDFVoucherConverter.csproj
+++ b/XMLtoPDFVoucherConverter/XMLtoPDFVoucherConverter.csproj
@@ -8,4 +8,10 @@
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="FontAwesome.Sharp" Version="6.3.0" />
+    <PackageReference Include="itext7" Version="8.0.1" />
+    <PackageReference Include="itext7.pdfhtml" Version="5.0.1" />
+  </ItemGroup>
+
 </Project>
