--- a/XMLtoPDFVoucherConverter/XMLtoPDFVoucherConverter.csproj
+++ b/XMLtoPDFVoucherConverter/XMLtoPDFVoucherConverter.csproj
@@ -16,6 +16,12 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Reference Include="NumToLetters">
+      <HintPath>..\..\PERU-SMART\recursos\NumToLetters.dll</HintPath>
+    </Reference>
+  </ItemGroup>
+
+  <ItemGroup>
     <Compile Update="Properties\Resources.Designer.cs">
       <DesignTime>True</DesignTime>
       <AutoGen>True</AutoGen>
